--- a/render.yaml
+++ b/render.yaml
@@ -3,5 +3,5 @@ services:
     name: wellorgs-flask-app
     env: python
     plan: free
-    buildCommand: ""
+    buildCommand: pip install -r requirements.txt
     startCommand: "python app.py"
